sdk/android/v5/receive-messages.mdx
---
title: "Receive messages with the CometChat Android SDK v5"
description: "Receive real-time and offline messages on Android with CometChat SDK v5 using message listeners, fetching missed messages, and handling delivery receipts."
---



Receiving messages with CometChat has two parts:

1. Adding a listener to receive [Real-time Messages](/sdk/android/v5/receive-messages#real-time-messages) when your app is running
2. Calling a method to retrieve [Missed Messages](/sdk/android/v5/receive-messages#missed-messages) when your app was not running

## Real-time Messages

*In other words, as a recipient, how do I receive messages when my app is running?*

For every activity or fragment you wish to receive messages in, you need to register the `MessageListener` using the `addMessageListener()` method.

We suggest adding the listener in the `onResume()` method of the activity or the fragment where you wish to receive these events in.

<Tabs>
<Tab title="Java">
```java
private String listenerID = "UNIQUE_LISTENER_ID";

CometChat.addMessageListener(listenerID, new CometChat.MessageListener() {
  @Override
  public void onTextMessageReceived(TextMessage textMessage) {
      Log.d(TAG, "Text message received successfully: " + textMessage.toString());
  }

  @Override
  public void onMediaMessageReceived(MediaMessage mediaMessage) {
      Log.d(TAG, "Media message received successfully: " + mediaMessage.toString());
  }

  @Override
  public void onCustomMessageReceived(CustomMessage customMessage) {
      Log.d(TAG, "Custom message received successfully: " + customMessage.toString());
  }

  @Override
  public void onCardMessageReceived(CardMessage cardMessage) {
      Log.d(TAG, "Card message received successfully: " + cardMessage.toString());
  }
});
```

</Tab>

<Tab title="Kotlin">
```kotlin
val listenerID:String = "UNIQUE_LISTENER_ID"

CometChat.addMessageListener(listenerID, object : MessageListener() {
  override fun onTextMessageReceived(textMessage: TextMessage) {
      Log.d(TAG, "Text message received successfully: $textMessage")
  }

  override fun onMediaMessageReceived(mediaMessage: MediaMessage) {
      Log.d(TAG, "Media message received successfully: $mediaMessage")
  }

  override fun onCustomMessageReceived(customMessage: CustomMessage) {
      Log.d(TAG, "Custom message received successfully: $customMessage")
  }

  override fun onCardMessageReceived(cardMessage: CardMessage) {
      Log.d(TAG, "Card message received successfully: $cardMessage")
  }
})
```

</Tab>

</Tabs>

| Parameter    | Description                                                                                    |
| ------------ | ---------------------------------------------------------------------------------------------- |
| `listenerID` | An ID that uniquely identifies that listener. We recommend using the activity or fragment name |

We recommend you remove the listener once the activity or fragment is not in use. Typically, this can be added in the `onPause()` method.

<Tabs>
<Tab title="Java">
```java
private String listenerID = "UNIQUE_LISTENER_ID";

CometChat.removeMessageListener(listenerID);
```

</Tab>

<Tab title="Kotlin">
```kotlin
val listenerID:String = "UNIQUE_LISTENER_ID"

CometChat.removeMessageListener(listenerID)
```

</Tab>

</Tabs>

<Warning>

As a sender, you will not receive your own message in a real-time message event. However, if a user is logged-in using multiple devices, they will receive an event for their own message in other devices.

</Warning>

### Receiving Card Messages

`onCardMessageReceived(CardMessage cardMessage)` is triggered when a card message (category `"card"`) is received. Card Messages are **receive-only** — they are created via the Platform REST API or the Dashboard Bubble Builder, not sent from the SDK (see [Send a Message → Card Message](/sdk/android/v5/send-message#card-message)).

The `CardMessage` payload exposes:

| Method | Returns | Description |
| ------ | ------- | ----------- |
| `getCard()` | `JSONObject` | The raw card schema/payload to render. |
| `getText()` | `String` | Optional text shown alongside the card. |
| `getFallbackText()` | `String` | Text shown when the card payload cannot be rendered. |
| `getTags()` | `List<String>` | Tags associated with the message. |

### Render a Card Message

The received `CardMessage` carries raw card-schema JSON in `getCard()`. To draw it natively, use the **CometChat Cards** renderer library (`com.cometchat:cards-android`) — the same renderer the UI Kit's card bubble wraps. It is a pure renderer: you hand it the card JSON and an action callback, and you own all action behavior.

#### Add the Cards dependency

```groovy
// settings.gradle (or project-level build.gradle)
repositories {
    maven { url "https://dl.cloudsmith.io/public/cometchat/cometchat/maven/" }
}
```

```groovy
// app/build.gradle
dependencies {
    implementation "com.cometchat:cards-android:1.0.0"
}
```

<Note>
Requires `minSdk 24`, Kotlin, and the internet permission in your `AndroidManifest.xml`.
</Note>

#### Render the card

Pass the card JSON (`cardMessage.getCard().toString()`) to the renderer and handle actions through the callback.

<Tabs>
<Tab title="Jetpack Compose">
```kotlin
import com.cometchat.cards.CometChatCardComposable
import com.cometchat.cards.models.CometChatCardThemeMode
import com.cometchat.cards.models.*

@Composable
fun CardMessageContent(cardMessage: CardMessage) {
    CometChatCardComposable(
        cardJson = cardMessage.card.toString(),
        themeMode = CometChatCardThemeMode.AUTO, // follows system light/dark
        onAction = { event ->
            when (val action = event.action) {
                is CometChatCardOpenUrlAction -> openUrl(action.url)
                is CometChatCardChatWithUserAction -> openUserChat(action.uid)
                is CometChatCardCopyToClipboardAction -> copyToClipboard(action.value)
                is CometChatCardCustomCallbackAction -> handleCallback(action.callbackId, action.payload)
                else -> { /* handle the remaining action types */ }
            }
        }
    )
}
```
</Tab>
<Tab title="XML Views">
```kotlin
import com.cometchat.cards.CometChatCardView
import com.cometchat.cards.models.CometChatCardThemeMode

val cardView = CometChatCardView(context)
cardView.setCardSchema(cardMessage.card.toString())
cardView.setThemeMode(CometChatCardThemeMode.AUTO)
cardView.setActionCallback { event ->
    // event.action    -> one of the 9 tagged action types
    // event.elementId -> id of the tapped button/link
    // event.cardJson  -> the raw card schema JSON
    handleCardAction(event.action)
}
parentLayout.addView(cardView)
```
</Tab>
</Tabs>

<Note>
The Cards library is a **pure renderer** — it never executes actions, it only emits them through the callback. You own all behavior (opening URLs, navigating to chats, API calls, etc.). The 9 action types (`CometChatCardOpenUrlAction`, `CometChatCardChatWithUserAction`, …) live in `com.cometchat.cards.models`, and `event` is a `com.cometchat.cards.actions.CometChatCardActionEvent` exposing `action`, `elementId`, and `cardJson`.

When rendering directly, fallback is your responsibility: if the card JSON is empty or invalid, fall back to `cardMessage.getFallbackText()` (then `getText()`).
</Note>

## Missed Messages

*In other words, as a recipient, how do I receive messages that I missed when my app was not running?*

For most use cases, you will need to add functionality to load missed messages. If you're building an on-demand or live streaming app, you may choose to skip this and fetch the message history (say, last 100 messages) instead.

Using the same `MessagesRequest` class and the filters provided by the `MessagesRequestBuilder` class, you can fetch the message that we sent to the logged-in user but were not delivered to them as they were offline. For this, you will require the ID of the last message received. You can either maintain it at your end or use the `getLastDeliveredMessageId()` method provided by the CometChat class. This ID needs to be passed to the `setMessageId()` method of the builder class.

Now using the `fetchNext()` method, you can fetch all the messages that were sent to the user when they were offline.

Calling the `fetchNext()` method on the same object repeatedly allows you to fetch all the offline messages for the logged in user in a paginated manner

### Fetch Missed Messages of a particular one-on-one conversation

<Tabs>
<Tab title="Java">
```java
private int limit = 30;
private int latestId = CometChat.getLastDeliveredMessageId();
private String UID = "cometchat-uid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
      .setMessageId(latestId)
      .setLimit(limit)
      .setUID(UID)
      .build();

messagesRequest.fetchNext(new CometChat.CallbackListener<List<BaseMessage>>() {
  @Override
  public void onSuccess(List<BaseMessage> list) {
      for (BaseMessage message : list) {
          if (message instanceof TextMessage) {
              Log.d(TAG, "Text message received successfully: " +
                      ((TextMessage) message).toString());
          } else if (message instanceof MediaMessage) {
              Log.d(TAG, "Media message received successfully: " +
                      ((MediaMessage) message).toString());
          }
      }
  }

  @Override
  public void onError(CometChatException e) {
      Log.d(TAG, "Message fetching failed with exception: " + e.getMessage());
  }
});  
```

</Tab>

<Tab title="Kotlin">
```kotlin
lateinit var messagesRequest: MessagesRequest
val latestId = CometChat.getLastDeliveredMessageId()
val limit: Int = 30
val UID: String = "cometchat-uid-1"

val messagesRequest = MessagesRequestBuilder()
  .setMessageId(latestId)
  .setLimit(limit)
  .setUID(UID)
  .build()

messagesRequest.fetchNext(object : CallbackListener<List<BaseMessage?>>() {
  override fun onSuccess(list: List<BaseMessage?>) {
      for (message in list) {
          if (message is TextMessage) {
              Log.d(
                  TAG, "Text message received successfully: " +
                          message.toString()
              )
          } else if (message is MediaMessage) {
              Log.d(
                  TAG, "Media message received successfully: " +
                          message.toString()
              )
          }
      }
  }

  override fun onError(e: CometChatException) {
      Log.d(TAG, "Message fetching failed with exception: " + e.message)
  }
})
```

</Tab>

</Tabs>

### Fetch Missed Messages of a particular group conversation

<Tabs>
<Tab title="Java">
```java
private int limit = 30;
private int latestId = CometChat.getLastDeliveredMessageId();
private String GUID = "cometchat-guid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
      .setMessageId(latestId)
      .setLimit(limit)
      .setGUID(GUID)
      .build();

messagesRequest.fetchNext(new CometChat.CallbackListener<List<BaseMessage>>() {
  @Override
  public void onSuccess(List<BaseMessage> list) {
      for (BaseMessage message : list) {
          if (message instanceof TextMessage) {
              Log.d(TAG, "Text message received successfully: " + ((TextMessage) message).toString());
          } else if (message instanceof MediaMessage) {
              Log.d(TAG, "Media message received successfully: " + ((MediaMessage)message).toString());
          }
      }
  }

  @Override
  public void onError(CometChatException e) {
      Log.d(TAG, "Message fetching failed with exception: " + e.getMessage());
  }
});
```

</Tab>

<Tab title="Kotlin">
```kotlin
lateinit var messagesRequest: MessagesReques
val latestId = CometChat.getLastDeliveredMessageId()
val limit: Int = 30
val GUID: String = "cometchat-uid-1"

messagesRequest = MessagesRequestBuilder()
  .setMessageId(latestId)
  .setLimit(limit)
  .setGUID(GUID)
  .build()

messagesRequest.fetchNext(object : CallbackListener<List<BaseMessage?>>() {
  override fun onSuccess(list: List<BaseMessage?>) {
      for (message in list) {
          if (message is TextMessage) {
              Log.d(
                  TAG, "Text message received successfully: " +
                          message.toString()
              )
          } else if (message is MediaMessage) {
              Log.d(
                  TAG, "Media message received successfully: " +
                          message.toString()
              )
          }
      }
  }

  override fun onError(e: CometChatException) {
      Log.d(TAG, "Message fetching failed with exception: " + e.message)
  }
}) 
```

</Tab>

</Tabs>

## Unread Messages

*In other words, as a logged-in user, how do I fetch the messages I've not read?*

Using the `MessagesRequest` class described above, you can fetch the unread messages for the logged-in user. In order to achieve this, you need to set the `unread` variable in the builder to `true` using the `setUnread()` method so that only the unread messages are fetched.

### Fetch Unread Messages of a particular one-on-one conversation

<Tabs>
<Tab title="Java">
```java
String UID = "cometchat-uid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
      .setUnread(true)
      .setLimit(20)
      .setUID(UID)
      .build();

messagesRequest.fetchPrevious(new CometChat.CallbackListener<List<BaseMessage>>() {
  @Override
  public void onSuccess(List<BaseMessage> list) {
      for (BaseMessage message : list) {
          if (message instanceof TextMessage) {
              Log.d(TAG, "Text message received successfully: " +((TextMessage) message).toString());
          } else if (message instanceof MediaMessage) {
              Log.d(TAG, "Media message received successfully: " +((MediaMessage) message).toString());
          }
      }
  }

  @Override
  public void onError(CometChatException e) {
      Log.d(TAG, "Message fetching failed with exception: " + e.getMessage());
  }
});
```

</Tab>

<Tab title="Kotlin">
```kotlin
val UID:String = "cometchat-uid-1"

val messagesRequest = MessagesRequestBuilder()
  .setUnread(true)
  .setLimit(20)
  .setUID(UID)
  .build()

messagesRequest.fetchPrevious(object : CallbackListener<List<BaseMessage?>>() {
  override fun onSuccess(list: List<BaseMessage?>) {
      for (message in list) {
          if (message is TextMessage) {
              Log.d(TAG, "Text message received successfully: $message")
          } else if (message is MediaMessage) {
              Log.d(TAG, "Media message received successfully: $message")
          }
      }
  }

  override fun onError(e: CometChatException) {
      Log.d(TAG, "Message fetching failed with exception: " + e.message)
  }
})
```

</Tab>

</Tabs>

### Fetch Unread Messages of a particular group conversation

<Tabs>
<Tab title="Java">
```java
String GUID = "cometchat-guid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
      .setUnread(true)
      .setLimit(20)
      .setGUID(GUID)
      .build();

messagesRequest.fetchPrevious(new CometChat.CallbackListener<List<BaseMessage>>() {
  @Override
  public void onSuccess(List<BaseMessage> list) {
      for (BaseMessage message : list) {
          if (message instanceof TextMessage) {
              Log.d(TAG, "Text message received successfully: " + ((TextMessage) message).toString());
          } else if (message instanceof MediaMessage) {
              Log.d(TAG, "Media message received successfully: " + ((MediaMessage)message).toString());
          }
      }
  }

  @Override
  public void onError(CometChatException e) {
      Log.d(TAG, "Message fetching failed with exception: " + e.getMessage());
  }
});
```

</Tab>

<Tab title="Kotlin">
```kotlin
val GUID:String = "cometchat-guid-1"

val messagesRequest = MessagesRequestBuilder()
  .setUnread(true)
  .setLimit(20)
  .setGUID(GUID)
  .build()

messagesRequest.fetchPrevious(object : CallbackListener<List<BaseMessage?>>() {
  override fun onSuccess(list: List<BaseMessage?>) {
      for (message in list) {
          if (message is TextMessage) {
              Log.d(TAG, "Text message received successfully: $message")
          } else if (message is MediaMessage) {
              Log.d(TAG, "Media message received successfully: $message")
          }
      }
  }

  override fun onError(e: CometChatException) {
      Log.d(TAG, "Message fetching failed with exception: " + e.message)
  }
})
```

</Tab>

</Tabs>

<Note>
Base Message

The list of messages received is in the form of objects of `BaseMessage` class. A `BaseMessage` can either be an object of the `TextMessage`, `MediaMessage`, `CustomMessage`, `Action` or `Call` class. You can use the `instanceOf` operator to check the type of object.

</Note>

## Message History

*In other words, as a logged-in user, how do I fetch the message history for a user or a group conversation?*

### Fetch Message History of a particular one-on-one conversation

Using the `MessagesRequest` class and the filters for the `MessagesRequestBuilder` class as shown in the below code snippet, you can fetch the entire conversation between the logged in user and any particular user. For this use case, it is mandatory to set the UID parameter using the `setUID()` method of the builder. This UID is the unique id of the user for which the conversation needs to be fetched.

<Tabs>
<Tab title="Java">
```java
private int limit = 30;
private String UID = "cometchat-uid-1"

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
      .setLimit(limit)
      .setUID(UID)
      .build();

messagesRequest.fetchPrevious(new CometChat.CallbackListener<List<BaseMessage>>() {
  @Override
  public void onSuccess(List<BaseMessage> list) {
      for (BaseMessage message : list) {
          if (message instanceof TextMessage) {
              Log.d(TAG, "Text message received successfully: " + ((TextMessage) message).toString());
          } else if (message instanceof MediaMessage) {
              Log.d(TAG, "Media message received successfully: " + ((MediaMessage)message).toString());
          }
      }
  }

  @Override
  public void onError(CometChatException e) {
      Log.d(TAG, "Message fetching failed with exception: " + e.getMessage());
  }
});  
```

</Tab>

<Tab title="Kotlin">
```kotlin
val limit: Int = 30
val UID: String = "cometchat-uid-1"

val messagesRequest = MessagesRequestBuilder()
  .setLimit(limit)
  .setUID(UID)
  .build()

messagesRequest.fetchPrevious(object : CallbackListener<List<BaseMessage?>>() {
  override fun onSuccess(list: List<BaseMessage?>) {
      for (message in list) {
          if (message is TextMessage) {
              Log.d(TAG, "Text message received successfully: $message")
          } else if (message is MediaMessage) {
              Log.d(TAG, "Media message received successfully: $message")
          }
      }
  }

  override fun onError(e: CometChatException) {
      Log.d(TAG, "Message fetching failed with exception: " + e.message)
  }
})  
```

</Tab>

</Tabs>

Calling the `fetchPrevious()` method on the same object repeatedly allows you to fetch all the previous messages in a paginated way.

### Fetch Message History of a particular group conversation

Using the `MessagesRequest` class and the filters for the `MessagesRequestBuilder` class as shown in the below code snippet, you can fetch the entire conversation for any group provided you have joined the group. For this use case, it is mandatory to set the GUID parameter using the `setGUID()` method of the builder. This GUID is the unique identifier of the Group for which the messages are to be fetched.

<Tabs>
<Tab title="Java">
```java
private int limit = 30;
private String GUID = "cometchat-guid-1"

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
      .setLimit(limit)
      .setGUID(GUID)
      .build();

messagesRequest.fetchPrevious(new CometChat.CallbackListener<List<BaseMessage>>() {
  @Override
  public void onSuccess(List<BaseMessage> list) {
      for (BaseMessage message : list) {
          if (message instanceof TextMessage) {
              Log.d(TAG, "Text message received successfully: " + ((TextMessage) message).toString());
          } else if (message instanceof MediaMessage) {
              Log.d(TAG, "Media message received successfully: " + ((MediaMessage)message).toString());
          }
      }
  }

  @Override
  public void onError(CometChatException e) {
      Log.d(TAG, "Message fetching failed with exception: " + e.getMessage());
  }
});
```

</Tab>

<Tab title="Kotlin">
```kotlin
val limit: Int = 30
val GUID: String = "cometchat-guid-1"

val messagesRequest = MessagesRequestBuilder()
  .setLimit(limit)
  .setGUID(GUID)
  .build()

messagesRequest.fetchPrevious(object : CallbackListener<List<BaseMessage?>>() {
  override fun onSuccess(list: List<BaseMessage?>) {
      for (message in list) {
          if (message is TextMessage) {
              Log.d(TAG, "Text message received successfully: $message")
          } else if (message is MediaMessage) {
              Log.d(TAG, "Media message received successfully: $message")
          }
      }
  }

  override fun onError(e: CometChatException) {
      Log.d(TAG, "Message fetching failed with exception: ${e.message}")
  }
})
```

</Tab>

</Tabs>

Calling the `fetchPrevious()` method on the same object repeatedly allows you to fetch the entire conversation between the logged in user and the specified user. This can be implemented with upward scrolling to display the entire conversation.

## Search Messages

In other words, as a logged-in user, how do I search a message?

In order to do this, you can use the `setSearchKeyword()` method. This method accepts string as input. When set, the SDK will fetch messages which match the `searchKeyword`.

<Note>

By default, the searchKey is searched only in message text. However, if you enable `Conversation & Advanced Search`, the searchKey will be searched in message text, file name, mentions & mime type of the file.

The `Conversation & Advanced Search` is only available in `Advanced` & `Custom` [plans](https://www.cometchat.com/pricing). If you're already on one of these plans, please enable the `Conversation & Advanced Search` from [CometChat Dashboard](https://app.cometchat.com) (Open your app, navigate to Chats -> Settings -> General Configuration)

</Note>

| Feature          | Basic Search | Advance Search |
| ---------------- | ------------ | -------------- |
| Text search      | ✅            | ✅              |
| File name search | ❌            | ✅              |
| Mentions search  | ❌            | ✅              |
| Mime type search | ❌            | ✅              |

### Search Messages in a particular one-on-one conversation

<Tabs>
<Tab title="Java">
```java
private int limit = 30;
private String UID = "cometchat-uid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder().setSearchKeyword("Hello").setUID(UID).setLimit(limit).build();

messagesRequest.fetchPrevious(new CometChat.CallbackListener<List<BaseMessage>>() {
  @Override
  public void onSuccess(List<BaseMessage> list) {
      for (BaseMessage message : list) {
          if (message instanceof TextMessage) {
              Log.d(TAG, "Text message received successfully: " + ((TextMessage) message).toString());
          } else if (message instanceof MediaMessage) {
              Log.d(TAG, "Media message received successfully: " + ((MediaMessage)message).toString());
          }
      }
  }

  @Override
  public void onError(CometChatException e) {
      Log.d(TAG, "Message fetching failed with exception: " + e.getMessage());
  }
});
```

</Tab>

<Tab title="Kotlin">
```kotlin
val limit: Int = 30
val UID: String = "cometchat-uid-1"

val messagesRequest = MessagesRequestBuilder().setSearchKeyword("Hello").setUID(UID).setLimit(limit).build()

messagesRequest.fetchPrevious(object : CallbackListener<List<BaseMessage?>>() {
  override fun onSuccess(list: List<BaseMessage?>) {
      for (message in list) {
          if (message is TextMessage) {
              Log.d(TAG, "Text message received successfully: $message")
          } else if (message is MediaMessage) {
              Log.d(TAG, "Media message received successfully: $message")
          }
      }
  }

  override fun onError(e: CometChatException) {
      Log.d(TAG, "Message fetching failed with exception: ${e.message}")
  }
})
```

</Tab>

</Tabs>

### Search Messages in a particular group conversation

<Tabs>
<Tab title="Java">
```java
private int limit = 30;
private String GUID = "cometchat-guid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder().setSearchKeyword("Hello").setGUID(GUID).setLimit(limit).build();

messagesRequest.fetchPrevious(new CometChat.CallbackListener<List<BaseMessage>>() {
  @Override
  public void onSuccess(List<BaseMessage> list) {
      for (BaseMessage message : list) {
          if (message instanceof TextMessage) {
              Log.d(TAG, "Text message received successfully: " + ((TextMessage) message).toString());
          } else if (message instanceof MediaMessage) {
              Log.d(TAG, "Media message received successfully: " + ((MediaMessage)message).toString());
          }
      }
  }

  @Override
  public void onError(CometChatException e) {
      Log.d(TAG, "Message fetching failed with exception: " + e.getMessage());
  }
});
```

</Tab>

<Tab title="Kotlin">
```kotlin
val limit = 30
val GUID = "cometchat-guid-1"

val messagesRequest = MessagesRequestBuilder().setSearchKeyword("Hello").setGUID(GUID).setLimit(limit).build()

messagesRequest.fetchPrevious(object : CallbackListener<List<BaseMessage?>>() {
  override fun onSuccess(list: List<BaseMessage?>) {
      for (message in list) {
          if (message is TextMessage) {
              Log.d(TAG, "Text message received successfully: $message")
          } else if (message is MediaMessage) {
              Log.d(TAG, "Media message received successfully: $message")
          }
      }
  }

  override fun onError(e: CometChatException) {
      Log.d(TAG, "Message fetching failed with exception: ${e.message}")
  }
})
```

</Tab>

</Tabs>

## Unread Messages Count

*In other words, as a logged-in user, how do I find out the number of unread messages that I have?*

### Fetch Unread Message Count of a particular one-on-one conversation

*In other words, how do I find out the number of unread messages I have from a particular user?*

In order to get the unread message count for a particular user (with respect to the logged-in user), you can use the `getUnreadMessageCountForUser()`.

This method has the two variants:

<Tabs>
<Tab title="Java">
```java
CometChat.getUnreadMessageCountForUser(String UID, Callbacks);
```

</Tab>

<Tab title="Kotlin">
```kotlin
CometChat.getUnreadMessageCountForUser(UID: String, Callbacks) 
```

</Tab>

</Tabs>

If you wish to ignore the messages from blocked users you can use the below syntax setting the boolean parameter to `true`:

<Tabs>
<Tab title="Java">
```java
CometChat.getUnreadMessageCountForUser(String UID, boolean hideMessagesFromBlockedUsers, Callbacks); 
```

</Tab>

<Tab title="Kotlin">
```kotlin
CometChat.getUnreadMessageCountForUser(UID: String, hideMessagesFromBlockedUsers: Boolean, Callbacks)
```

</Tab>

</Tabs>

<Tabs>
<Tab title="Java">
```java
private String UID = "cometchat-uid-1"

CometChat.getUnreadMessageCountForUser(UID, new CometChat.CallbackListener<HashMap<String, Integer>>() {
  @Override
  public void onSuccess(HashMap<String, Integer> stringIntegerHashMap) {
      // handle success
  }

  @Override
  public void onError(CometChatException e) {
      // handle error
  }
});
```

</Tab>

<Tab title="Kotlin">
```kotlin
val UID: String = "cometchat-uid-1"
      
CometChat.getUnreadMessageCountForUser(UID, object : CallbackListener<HashMap<String?, Int?>?>() {
  override fun onSuccess(stringIntegerHashMap: HashMap<String?, Int?>?) {
      // handle success
  }

  override fun onError(e: CometChatException) {
      // handle error
  }
})
```

</Tab>

</Tabs>

In the `onSuccess()` callback, you will receive a Hashmap which will contain the `UID` of the user as the key and the unread message count as the value.

### Fetch Unread Message Count of a particular group conversation

*In other words, how do I find out the number of unread messages I have in a single group?*

In order to get the unread message count for a particular group, you can use the `getUnreadMessageCountForGroup()`.

This method has two variants:

<Tabs>
<Tab title="Java">
```java
CometChat.getUnreadMessageCountForGroup(String GUID, Callbacks);
```

</Tab>

<Tab title="Kotlin">
```kotlin
CometChat.getUnreadMessageCountForUser(GUID: String, Callbacks)
```

</Tab>

</Tabs>

If you wish to ignore the messages from blocked users you can use the following syntax setting the boolean parameter to `true`:

<Tabs>
<Tab title="Java">
```java
CometChat.getUnreadMessageCountForGroup(String GUID, boolean hideMessagesFromBlockedUsers, Callbacks);
```

</Tab>

<Tab title="Kotlin">
```kotlin
CometChat.getUnreadMessageCountForUser(GUID: String, hideMessagesFromBlockedUsers: Boolean, Callbacks)
```

</Tab>

</Tabs>

<Tabs>
<Tab title="Java">
```java
private String GUID = "cometchat-guid-1"

CometChat.getUnreadMessageCountForGroup(GUID, new CometChat.CallbackListener<HashMap<String, Integer>>(){
  @Override
  public void onSuccess(HashMap<String, Integer> stringIntegerHashMap) {
      // handle success
  }

  @Override
  public void onError(CometChatException e) {
      // handle error
  }
});
```

</Tab>

<Tab title="Kotlin">
```kotlin
val GUID: String = "cometchat-guid-1"

CometChat.getUnreadMessageCountForGroup(GUID, object : CallbackListener<HashMap<String?, Int?>?>() {
      override fun onSuccess(stringIntegerHashMap: HashMap<String?, Int?>?) {
          // handle success
      }

      override fun onError(e: CometChatException) {
          // handle error
      }
  }
)
```

</Tab>

</Tabs>

In the `onSuccess()` callback, you will receive a Hashmap which will contain the `GUID` of the group as the key and the unread message count as the value.

### Fetch Unread Message Count of all one-on-one & group conversations

*In other words, how do I find out the number of unread messages for every one-on-one and group conversation?*

In order to get all the unread message counts, you can use the `getUnreadMessageCount()` method. This method has two variants:

<Tabs>
<Tab title="Java">
```java
CometChat.getUnreadMessageCount(Callbacks);
```

</Tab>

<Tab title="Kotlin">
```kotlin
CometChat.getUnreadMessageCount(Callbacks)
```

</Tab>

</Tabs>

If you wish to ignore the messages from blocked users you can use the following syntax setting the boolean parameter to `true`:

<Tabs>
<Tab title="Java">
```java
CometChat.getUnreadMessageCount(boolean hideMessagesFromBlockedUsers, Callbacks);
```

</Tab>

<Tab title="Kotlin">
```kotlin
CometChat.getUnreadMessageCount(hideMessagesFromBlockedUsers: Boolean, Callbacks)
```

</Tab>

</Tabs>

<Tabs>
<Tab title="Java">
```java
CometChat.getUnreadMessageCount(new CometChat.CallbackListener<HashMap<String, HashMap<String, Integer>>>() {
  @Override
  public void onSuccess(HashMap<String, HashMap<String, Integer>> stringHashMapHashMap) {
      // handle success
  }

  @Override
  public void onError(CometChatException e) {
      // handle error
  }
});  
```

</Tab>

<Tab title="Kotlin">
```kotlin
CometChat.getUnreadMessageCount(object : CallbackListener<HashMap<String?, HashMap<String?, Int?>?>?>() {
  override fun onSuccess(stringHashMapHashMap: HashMap<String?, HashMap<String?, Int?>?>?) {
      // handle success
  }

  override fun onError(e: CometChatException) {
      // handle error
  }
})
```

</Tab>

</Tabs>

In the `onSuccess()` callback, you will receive a hashmap having two keys:

1. `user` - The value for this key holds another hashmap that holds the `UIDs` of users and their corresponding unread message counts.
2. `group` - The value for this key holds another hashmap that holds the `GUIDs` of groups and their corresponding unread message counts.

### Fetch Unread Message Count of all one-on-one conversations

*In other words, how do I find out the number of unread messages I have for every user?*

In order to fetch the unread message counts for just the users, you can use the `getUnreadMessageCountForAllUsers()` method.

This method, just like others, has two variants:

<Tabs>
<Tab title="Java">
```java
CometChat.getUnreadMessageCountForAllUsers(Callbacks);
```

</Tab>

<Tab title="Kotlin">
```kotlin
CometChat.getUnreadMessageCountForAllUsers(Callbacks)
```

</Tab>

</Tabs>

If you wish to ignore the messages from blocked users you can use the following syntax setting the boolean parameter to `true`:

<Tabs>
<Tab title="Java">
```java
CometChat.getUnreadMessageCountForAllUsers(boolean hideMessagesFromBlockedUsers, Callbacks);
```

</Tab>

<Tab title="Kotlin">
```kotlin
CometChat.getUnreadMessageCountForAllUsers(hideMessagesFromBlockedUsers: Boolean, Callbacks)
```

</Tab>

</Tabs>

<Tabs>
<Tab title="Java">
```java
CometChat.getUnreadMessageCountForAllUsers(new CometChat.CallbackListener<HashMap<String, Integer>>() {
@Override
  public void onSuccess(HashMap<String, Integer> stringIntegerHashMap) {
  	// Handle Success
}

@Override
  public void onError(CometChatException e) {
  	// Handle Error
}
});
```

</Tab>

<Tab title="Kotlin">
```kotlin
CometChat.getUnreadMessageCountForAllUsers(object : CometChat.CallbackListener<HashMap<String, Int>>() {
override fun onSuccess(stringIntegerHashMap: HashMap<String, Int>) {
  Log.d(TAG,"onSuccess: ${stringIntegerHashMap.size}")
}

override fun onError(e: CometChatException) {
  Log.d(TAG,"onError: ${e.message}")
}
})
```

</Tab>

</Tabs>

In the `onSuccess()` callback, you will receive a Hashmap that will contain the `UIDs` of users as the key and the unread message counts as the values.

### Fetch Unread Message Count of all group conversations

*In other words, how do I find out the number of unread messages for every group?*

In order to fetch the unread message counts for all groups, you can use the `getUnreadMessageCountForAllGroups()` method.

This method has two variants:

<Tabs>
<Tab title="Java">
```java
CometChat.getUnreadMessageCountForAllGroups(Callbacks);
```

</Tab>

<Tab title="Kotlin">
```kotlin
CometChat.getUnreadMessageCountForAllGroups(Callbacks)
```

</Tab>

</Tabs>

If you wish to ignore the messages from blocked users you can use the below syntax setting the boolean parameter to `true`:

<Tabs>
<Tab title="Java">
```java
CometChat.getUnreadMessageCountForAllGroups(boolean hideMessagesFromBlockedUsers, Callbacks);
```

</Tab>

<Tab title="Kotlin">
```kotlin
CometChat.getUnreadMessageCountForAllGroups(hideMessagesFromBlockedUsers: Boolean, Callbacks)
```

</Tab>

</Tabs>

<Tabs>
<Tab title="Java">
```java
CometChat.getUnreadMessageCountForAllGroups(new CometChat.CallbackListener<HashMap<String, Integer>>() {
@Override
  public void onSuccess(HashMap<String, Integer> stringIntegerHashMap) {
  	// Handle success
}

@Override
  public void onError(CometChatException e) {
  // Handle Error
}
});
```

</Tab>

<Tab title="Kotlin">
```kotlin
CometChat.getUnreadMessageCountForAllGroups(object : CometChat.CallbackListener<HashMap<String, Int>>() {
override fun onSuccess(stringIntegerHashMap: HashMap<String, Int>) {
  Log.d(TAG,"onSuccess: ${stringIntegerHashMap.size}")
}

override fun onError(e: CometChatException) {
  Log.e(TAG,"onError: ${e.message}")
}
})
```

</Tab>

</Tabs>

In the `onSuccess()` callback, you will receive a hashmap which will contain the `GUIDs` of the groups as the key and the unread message counts as the values.
